@@ -1,5 +1,8 @@
 2021-02-19  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/server/Message.java:
+	Added display_data Message.
+
 	* Added "magics" Magic.
 
 	* src/main/java/galyleo/install/Install.java:
